// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Category: product categories.
Customer: customer information.
CustomerContact: customer contacts and interactions.
SalesRep: information about sales representatives.
Discount: This table defines available discounts for products.
Product: product details that are available for sale.
Order: each order placed by a customer.
OrderItem: This table captures the products in each order.
ProductCategory: This table maps products to categories.
ProductSupplier: This junction table maps products to suppliers.
Supplier: supplier information.
Return: product returns by customers.
'''
}

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    phone_number VARCHAR 
    date_joined DATETIME 
    }

Table CustomerContact {
    id INTEGER [primary key]
    customer_id INTEGER 
    sales_rep_id INTEGER 
    contact_date DATETIME 
    notes VARCHAR 
    }

Table SalesRep {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    }

Table Discount {
    id INTEGER [primary key]
    product_id INTEGER 
    discount_amount INTEGER 
    start_date DATETIME 
    end_date DATETIME 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    price INTEGER 
    stock INTEGER 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_placed DATETIME 
    total_amount INTEGER 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table ProductCategory {
    id INTEGER [primary key]
    product_id INTEGER 
    category_id INTEGER 
    }

Table ProductSupplier {
    id INTEGER [primary key]
    product_id INTEGER 
    supplier_id INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    }

Table Return {
    id INTEGER [primary key]
    order_item_id INTEGER 
    return_date DATETIME 
    refund_amount INTEGER 
    }



// Relationships
    Ref: CustomerContact.(customer_id) < Customer.(id)
    Ref: CustomerContact.(sales_rep_id) < SalesRep.(id)
    Ref: Discount.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: ProductCategory.(category_id) < Category.(id)
    Ref: ProductCategory.(product_id) < Product.(id)
    Ref: ProductSupplier.(product_id) < Product.(id)
    Ref: ProductSupplier.(supplier_id) < Supplier.(id)
    Ref: Return.(order_item_id) < OrderItem.(id)
